--- a/teste.in
+++ b/teste.in
@@ -1,10 +1,10 @@
 ADD OL29969W; Impro; Keith Johnstone; 1979
 ADD OL257943W; A Game of Thrones; George R. R. Martin; 1996
 ADD OL9302660W; Predictably Irrational; Dan Ariely; 2008
-SEARCH OL29969W
-SEARCH George R. R. Martin
-CHECK_OUT OL29969W
-SEARCH OL29969W
-CHECK_IN OL29969W
-CHECK_IN OL3737036W
+SEARCH OL29969W;
+SEARCH George R. R. Martin;
+CHECK_OUT OL29969W;
+SEARCH OL29969W;
+CHECK_IN OL29969W;
+CHECK_IN OL3737036W;
 
