coisas mas novas

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
         "livro.h": "c",
         "*.in": "c",
         "lse_neutra.h": "c"
-    }
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
